# HieroglyphVM

./: .clang_complete  .gitignore  CMakeCache.txt  CMakeLists.txt  HVMC_SPEC.md  Makefile  README.md  build.bat  cmake_install.cmake
src/: chunk.c  chunk.h  common.h  disassembler.c  disassembler.h  loader.c  loader.h  main.c  memory.c  memory.h  value.c  value.h  vm.c  vm.h
